--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,5 +18,9 @@ jobs:
         with:
           python-version: 3.x
 
+      - name: Setup Tools
+        run: |
+          python3 -m pip install --upgrade clang_format
+
       - name: Run pre-commit
-        uses: pre-commit/action@v3.0.0
+        uses: pre-commit/action@v3.0.1
