[ndarray] NDArray implementation
Signed-off-by: Maciej Torhan <maciek97x@gmail.com>

--- a/cuda_grmonty/tests/BUILD
+++ b/cuda_grmonty/tests/BUILD
@@ -1,4 +1,15 @@
 cc_test(
+    name = "ndarray_test",
+    size = "small",
+    srcs = ["ndarray_test.cpp"],
+    deps = [
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
+        "//cuda_grmonty:ndarray",
+    ],
+)
+
+cc_test(
     name = "harm_data_test",
     size = "small",
     srcs = ["harm_data_test.cpp"],
