[harm] Use ndarray
Signed-off-by: Maciej Torhan <maciek97x@gmail.com>

--- a/cuda_grmonty/BUILD
+++ b/cuda_grmonty/BUILD
@@ -28,7 +28,8 @@ cc_library(
     srcs = ["harm_data.cpp"],
     hdrs = ["harm_data.hpp"],
     deps = [
-        ":consts"
+        ":consts",
+        ":ndarray",
     ]
 )
 
