--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Setup Tools
         run: |
-          python3 -m pip install --upgrade clang_format
+          python3 -m pip install --upgrade cpplint clang_format
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
