[integration] Add 61-point Gauss-Kronrod integration
Signed-off-by: Maciej Torhan <maciek97x@gmail.com>

--- a/cuda_grmonty/tests/BUILD
+++ b/cuda_grmonty/tests/BUILD
@@ -10,6 +10,17 @@ cc_test(
 )
 
 cc_test(
+    name = "integration_test",
+    size = "small",
+    srcs = ["integration_test.cpp"],
+    deps = [
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
+        "//cuda_grmonty:integration",
+    ],
+)
+
+cc_test(
     name = "harm_model_test",
     size = "small",
     srcs = ["harm_model_test.cpp"],
