--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,6 +13,9 @@ bazel_dep(name = "spdlog", version = "1.15.3")
 # GoogleTest
 bazel_dep(name = "googletest", version = "1.17.0")
 
+# Benchmark
+bazel_dep(name = "google_benchmark", version = "1.9.4")
+
 # Hedron's Compile Commands Extractor for Bazel
 # https://github.com/hedronvision/bazel-compile-commands-extractor
 bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
