--- a/.bazelrc
+++ b/.bazelrc
@@ -1,1 +1,9 @@
+# Convenient flag shortcuts.
+build --flag_alias=enable_cuda=@rules_cuda//cuda:enable
+build --flag_alias=cuda_archs=@rules_cuda//cuda:archs
+build --flag_alias=cuda_compiler=@rules_cuda//cuda:compiler
+build --flag_alias=cuda_copts=@rules_cuda//cuda:copts
+build --flag_alias=cuda_runtime=@rules_cuda//cuda:runtime
+
 build --cxxopt=-std=c++20 --cxxopt=-O3
+build:cuda --define=CUDA=true  --cuda_copts=-std=c++20 --cxxopt=-DCUDA=1
