--- a/.github/workflows/bazel-test.yml
+++ b/.github/workflows/bazel-test.yml
@@ -29,3 +29,39 @@ jobs:
     - name: Test
       run: |
         "${GITHUB_WORKSPACE}/bin/bazel" test --test_output=all //...
+
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Mount bazel cache
+      uses: actions/cache@v4
+      with:
+        path: "/home/runner/.cache/bazel"
+        key: bazel
+
+    - name: Install bazelisk
+      run: |
+        curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.25.0/bazelisk-linux-amd64"
+        mkdir -p "${GITHUB_WORKSPACE}/bin/"
+        mv bazelisk-linux-amd64 "${GITHUB_WORKSPACE}/bin/bazel"
+        chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
+
+    - name: Install lcov
+      run: |
+        sudo apt-get install lcov
+
+    - name: Coverage
+      run: |
+        "${GITHUB_WORKSPACE}/bin/bazel" coverage --combined_report=lcov --test_output=all //...
+
+    - name: Generate report
+      run: |
+        genhtml -o coverage_html bazel-out/_coverage/_coverage_report.dat
+
+    - name: Upload coverage report
+      uses: actions/upload-artifact@master
+      with:
+        name: coverage-report
+        path: coverage_html/
